--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:3000",
   "name": "logikpos_front",
   "version": "0.1.0",
   "private": true,
@@ -8,9 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "jquery": "^3.6.1",
+    "moment": "^2.29.4",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
