--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "express-session-sqlite": "^2.1.1",
     "jquery": "^3.6.1",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
