--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "proxy": "http://localhost:3000",
   "name": "logikpos_front",
+  "homepage": "./",
+  "main": "main.js",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "express-session-sqlite": "^2.1.1",
@@ -17,13 +20,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.25.5",
+    "sqlite3": "^5.1.2",
     "sweetalert2": "^11.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "electron .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^21.2.3",
+    "nodemon": "^2.0.20"
   }
 }
